# dotmatrix

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN_NOTES.md  LICENSE  Makefile  NEXT.txt  PROJECT_SUMMARY.md  README.md  USAGE.md  build.sh  dmxcli.1  dotmatrix-installer.iss  dotmatrix.1  dotmatrix.desktop  example-config.toml  example-manifest.toml
crates/dmcli/: Cargo.toml
crates/dmcli/src/: main.rs
crates/dmcore/: Cargo.toml
crates/dmcore/src/: backup.rs  config.rs  crypto.rs  git.rs  index.rs  lib.rs  manifest.rs  project.rs  scanner.rs  store.rs
crates/dmgui/: Cargo.toml
crates/dmgui/src/: app.rs  keyboard.rs  main.rs  state.rs  theme.rs
crates/dmgui/src/widgets/: dialogs.rs  file_browser.rs  file_viewer.rs  mod.rs  project_tree.rs  restore_view.rs
crates/dmtui/: Cargo.toml
crates/dmtui/src/: app.rs  main.rs
debian/: changelog  control  copyright  rules
release/dotmatrix-0.2.0-linux-x86_64/: dotmatrix  dotmatrix.1
src/: app.rs  config.rs  crypto.rs  dmgui.rs  gui.rs  index.rs  lib.rs  main.rs  scanner.rs  tui.rs
