[package]
name = "dotmatrix"
version = "0.4.0"
edition = "2021"
authors = ["Woofson <https://github.com/Woofson>"]
description = "Dotfile management and versioning tool"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
chrono = "0.4"
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = "2.1"
sevenz-rust = "0.6"
ratatui = "0.29"
crossterm = "0.28"
ignore = "0.4"
syntect = "5.2"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
