[package]
name = "dmcli"
version = "2.0.0"
edition = "2021"
authors = ["Woofson <https://github.com/Woofson>"]
description = "CLI for dotmatrix - project compositor with git versioning"
license = "MIT"

[[bin]]
name = "dotmatrix"
path = "src/main.rs"

[dependencies]
dmcore = { path = "../dmcore" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
