[package]
name = "dmcore"
version = "2.0.0-rc.1"
edition = "2021"
authors = ["Woofson <https://github.com/Woofson>"]
description = "Core library for dotmatrix - project compositor with git versioning"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
sha2 = "0.10"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = "2.1"
sevenz-rust = "0.6"
ignore = "0.4"
age = "0.11"
