[package]
name = "dmgui"
version = "2.0.1"
edition = "2021"
authors = ["Woofson <https://github.com/Woofson>"]
description = "GUI for dotmatrix - project compositor with git versioning"
license = "MIT"

[[bin]]
name = "dmxgui"
path = "src/main.rs"

[dependencies]
dmcore = { path = "../dmcore" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
anyhow = "1.0"
dirs = "5.0"
syntect = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
age = { workspace = true }
chrono = "0.4"
