[package]
name = "dmtui"
version = "2.0.0-alpha.1"
edition = "2021"
authors = ["Woofson <https://github.com/Woofson>"]
description = "TUI for dotmatrix - project compositor with git versioning"
license = "MIT"

[[bin]]
name = "dotmatrix-tui"
path = "src/main.rs"

[dependencies]
dmcore = { path = "../dmcore" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
dirs = "5.0"
